--- a/Research/linmdtw/notebooks/AudioUsage.ipynb
+++ b/Research/linmdtw/notebooks/AudioUsage.ipynb
@@ -68,15 +68,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parallel Alignment 10.0% Elapsed time: 2.61\n",
-      "Parallel Alignment 20.0% Elapsed time: 6.56\n",
-      "Parallel Alignment 30.0% Elapsed time: 10.7\n",
-      "Parallel Alignment 40.0% Elapsed time: 13.9\n",
-      "Parallel Alignment 50.0% Elapsed time: 17.9\n",
-      "Parallel Alignment 60.0% Elapsed time: 20.9\n",
-      "Parallel Alignment 70.0% Elapsed time: 24.7\n",
-      "Parallel Alignment 80.0% Elapsed time: 27.8\n",
-      "Parallel Alignment 90.0% Elapsed time: 30.3\n"
+      "Parallel Alignment 10.0% Elapsed time: 6.77\n",
+      "Parallel Alignment 20.0% Elapsed time: 13.5\n",
+      "Parallel Alignment 30.0% Elapsed time: 20.3\n",
+      "Parallel Alignment 40.0% Elapsed time: 27\n",
+      "Parallel Alignment 50.0% Elapsed time: 33.9\n",
+      "Parallel Alignment 60.0% Elapsed time: 40.7\n",
+      "Parallel Alignment 70.0% Elapsed time: 48.3\n",
+      "Parallel Alignment 80.0% Elapsed time: 55.8\n",
+      "Parallel Alignment 90.0% Elapsed time: 62.7\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     "import time\n",
     "metadata = {'totalCells':0, 'M':X0_0.shape[0], 'N':X0_1.shape[0], \n",
     "            'timeStart':time.time(), 'perc':10}\n",
-    "path0 = linmdtw.linmdtw(X0_0, X0_1, do_gpu=True, metadata=metadata)"
+    "path0 = linmdtw.linmdtw(X0_0, X0_1, do_gpu=True, metadata=metadata)[1]"
    ]
   },
   {
@@ -99,6 +99,39 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.2.4-1ubuntu0.1 Copyright (c) 2000-2020 the FFmpeg developers\n",
+      "  built with gcc 9 (Ubuntu 9.3.0-10ubuntu2)\n",
+      "  configuration: --prefix=/usr --extra-version=1ubuntu0.1 --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 --enable-gpl --disable-stripping --enable-avresample --disable-filter=resample --enable-avisynth --enable-gnutls --enable-ladspa --enable-libaom --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libcodec2 --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libjack --enable-libmp3lame --enable-libmysofa --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librubberband --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzmq --enable-libzvbi --enable-lv2 --enable-omx --enable-openal --enable-opencl --enable-opengl --enable-sdl2 --enable-libdc1394 --enable-libdrm --enable-libiec61883 --enable-nvenc --enable-chromaprint --enable-frei0r --enable-libx264 --enable-shared\n",
+      "  libavutil      56. 31.100 / 56. 31.100\n",
+      "  libavcodec     58. 54.100 / 58. 54.100\n",
+      "  libavformat    58. 29.100 / 58. 29.100\n",
+      "  libavdevice    58.  8.100 / 58.  8.100\n",
+      "  libavfilter     7. 57.100 /  7. 57.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  5.100 /  5.  5.100\n",
+      "  libswresample   3.  5.100 /  3.  5.100\n",
+      "  libpostproc    55.  5.100 / 55.  5.100\n",
+      "Guessed Channel Layout for Input Stream #0.0 : stereo\n",
+      "Input #0, wav, from 'unsync0.wav':\n",
+      "  Duration: 00:00:40.00, bitrate: 5644 kb/s\n",
+      "    Stream #0:0: Audio: pcm_f64le ([3][0][0][0] / 0x0003), 44100 Hz, stereo, dbl, 5644 kb/s\n",
+      "Stream mapping:\n",
+      "  Stream #0:0 -> #0:0 (pcm_f64le (native) -> mp3 (libmp3lame))\n",
+      "Press [q] to stop, [?] for help\n",
+      "Output #0, mp3, to 'unsync0.mp3':\n",
+      "  Metadata:\n",
+      "    TSSE            : Lavf58.29.100\n",
+      "    Stream #0:0: Audio: mp3 (libmp3lame), 44100 Hz, stereo, fltp\n",
+      "    Metadata:\n",
+      "      encoder         : Lavc58.54.100 libmp3lame\n",
+      "size=     626kB time=00:00:40.02 bitrate= 128.1kbits/s speed=50.7x    \n",
+      "video:0kB audio:626kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.039486%\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -148,6 +181,39 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.2.4-1ubuntu0.1 Copyright (c) 2000-2020 the FFmpeg developers\n",
+      "  built with gcc 9 (Ubuntu 9.3.0-10ubuntu2)\n",
+      "  configuration: --prefix=/usr --extra-version=1ubuntu0.1 --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 --enable-gpl --disable-stripping --enable-avresample --disable-filter=resample --enable-avisynth --enable-gnutls --enable-ladspa --enable-libaom --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libcodec2 --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libjack --enable-libmp3lame --enable-libmysofa --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librubberband --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzmq --enable-libzvbi --enable-lv2 --enable-omx --enable-openal --enable-opencl --enable-opengl --enable-sdl2 --enable-libdc1394 --enable-libdrm --enable-libiec61883 --enable-nvenc --enable-chromaprint --enable-frei0r --enable-libx264 --enable-shared\n",
+      "  libavutil      56. 31.100 / 56. 31.100\n",
+      "  libavcodec     58. 54.100 / 58. 54.100\n",
+      "  libavformat    58. 29.100 / 58. 29.100\n",
+      "  libavdevice    58.  8.100 / 58.  8.100\n",
+      "  libavfilter     7. 57.100 /  7. 57.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  5.100 /  5.  5.100\n",
+      "  libswresample   3.  5.100 /  3.  5.100\n",
+      "  libpostproc    55.  5.100 / 55.  5.100\n",
+      "Guessed Channel Layout for Input Stream #0.0 : stereo\n",
+      "Input #0, wav, from 'sync0.wav':\n",
+      "  Duration: 00:00:30.00, bitrate: 5644 kb/s\n",
+      "    Stream #0:0: Audio: pcm_f64le ([3][0][0][0] / 0x0003), 44100 Hz, stereo, dbl, 5644 kb/s\n",
+      "Stream mapping:\n",
+      "  Stream #0:0 -> #0:0 (pcm_f64le (native) -> mp3 (libmp3lame))\n",
+      "Press [q] to stop, [?] for help\n",
+      "Output #0, mp3, to 'sync0.mp3':\n",
+      "  Metadata:\n",
+      "    TSSE            : Lavf58.29.100\n",
+      "    Stream #0:0: Audio: mp3 (libmp3lame), 44100 Hz, stereo, fltp\n",
+      "    Metadata:\n",
+      "      encoder         : Lavc58.54.100 libmp3lame\n",
+      "size=     470kB time=00:00:30.01 bitrate= 128.2kbits/s speed=49.3x    \n",
+      "video:0kB audio:469kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.052637%\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
@@ -191,15 +257,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parallel Alignment 10.0% Elapsed time: 51.5\n",
-      "Parallel Alignment 20.0% Elapsed time: 105\n",
-      "Parallel Alignment 30.0% Elapsed time: 161\n",
-      "Parallel Alignment 40.0% Elapsed time: 215\n",
-      "Parallel Alignment 50.0% Elapsed time: 270\n",
-      "Parallel Alignment 60.0% Elapsed time: 325\n",
-      "Parallel Alignment 70.0% Elapsed time: 374\n",
-      "Parallel Alignment 80.0% Elapsed time: 424\n",
-      "Parallel Alignment 90.0% Elapsed time: 477\n"
+      "Parallel Alignment 10.0% Elapsed time: 101\n",
+      "Parallel Alignment 20.0% Elapsed time: 201\n",
+      "Parallel Alignment 30.0% Elapsed time: 299\n",
+      "Parallel Alignment 40.0% Elapsed time: 396\n",
+      "Parallel Alignment 50.0% Elapsed time: 493\n",
+      "Parallel Alignment 60.0% Elapsed time: 587\n",
+      "Parallel Alignment 70.0% Elapsed time: 681\n",
+      "Parallel Alignment 80.0% Elapsed time: 775\n",
+      "Parallel Alignment 90.0% Elapsed time: 868\n"
      ]
     }
    ],
@@ -216,7 +282,7 @@
     "## Step 3: Run DTW in verbose mode\n",
     "metadata = {'totalCells':0, 'M':X5_0.shape[0], 'N':X5_1.shape[0], \n",
     "            'timeStart':time.time(), 'perc':10}\n",
-    "path5 = linmdtw.linmdtw(X5_0, X5_1, do_gpu=True, metadata=metadata)"
+    "path5 = linmdtw.linmdtw(X5_0, X5_1, do_gpu=True, metadata=metadata)[1]"
    ]
   },
   {
@@ -229,6 +295,39 @@
      "output_type": "stream",
      "text": [
       "Stretching...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg version 4.2.4-1ubuntu0.1 Copyright (c) 2000-2020 the FFmpeg developers\n",
+      "  built with gcc 9 (Ubuntu 9.3.0-10ubuntu2)\n",
+      "  configuration: --prefix=/usr --extra-version=1ubuntu0.1 --toolchain=hardened --libdir=/usr/lib/x86_64-linux-gnu --incdir=/usr/include/x86_64-linux-gnu --arch=amd64 --enable-gpl --disable-stripping --enable-avresample --disable-filter=resample --enable-avisynth --enable-gnutls --enable-ladspa --enable-libaom --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libcdio --enable-libcodec2 --enable-libflite --enable-libfontconfig --enable-libfreetype --enable-libfribidi --enable-libgme --enable-libgsm --enable-libjack --enable-libmp3lame --enable-libmysofa --enable-libopenjpeg --enable-libopenmpt --enable-libopus --enable-libpulse --enable-librsvg --enable-librubberband --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libspeex --enable-libssh --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx265 --enable-libxml2 --enable-libxvid --enable-libzmq --enable-libzvbi --enable-lv2 --enable-omx --enable-openal --enable-opencl --enable-opengl --enable-sdl2 --enable-libdc1394 --enable-libdrm --enable-libiec61883 --enable-nvenc --enable-chromaprint --enable-frei0r --enable-libx264 --enable-shared\n",
+      "  libavutil      56. 31.100 / 56. 31.100\n",
+      "  libavcodec     58. 54.100 / 58. 54.100\n",
+      "  libavformat    58. 29.100 / 58. 29.100\n",
+      "  libavdevice    58.  8.100 / 58.  8.100\n",
+      "  libavfilter     7. 57.100 /  7. 57.100\n",
+      "  libavresample   4.  0.  0 /  4.  0.  0\n",
+      "  libswscale      5.  5.100 /  5.  5.100\n",
+      "  libswresample   3.  5.100 /  3.  5.100\n",
+      "  libpostproc    55.  5.100 / 55.  5.100\n",
+      "Guessed Channel Layout for Input Stream #0.0 : stereo\n",
+      "Input #0, wav, from 'sync5.wav':\n",
+      "  Duration: 00:00:45.00, bitrate: 5644 kb/s\n",
+      "    Stream #0:0: Audio: pcm_f64le ([3][0][0][0] / 0x0003), 44100 Hz, stereo, dbl, 5644 kb/s\n",
+      "Stream mapping:\n",
+      "  Stream #0:0 -> #0:0 (pcm_f64le (native) -> mp3 (libmp3lame))\n",
+      "Press [q] to stop, [?] for help\n",
+      "Output #0, mp3, to 'sync5.mp3':\n",
+      "  Metadata:\n",
+      "    TSSE            : Lavf58.29.100\n",
+      "    Stream #0:0: Audio: mp3 (libmp3lame), 44100 Hz, stereo, fltp\n",
+      "    Metadata:\n",
+      "      encoder         : Lavc58.54.100 libmp3lame\n",
+      "size=     704kB time=00:00:45.01 bitrate= 128.1kbits/s speed=46.9x    \n",
+      "video:0kB audio:704kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 0.035112%\n"
      ]
     },
     {
@@ -256,11 +355,18 @@
     "linmdtw.save_audio(xsync5[sr*45:sr*90, ::], sr, \"sync5\")\n",
     "ipd.Audio(\"sync5.mp3\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
